fix: ensure label and helper/error message do not have margins and instead use gap for layout spacing

--- a/apps/src/code-studio/pd/workshop_dashboard/WorkshopFormTemplate/styles.module.scss
+++ b/apps/src/code-studio/pd/workshop_dashboard/WorkshopFormTemplate/styles.module.scss
@@ -134,6 +134,11 @@
         }
       }
 
+      div:first-of-type,
+      div:last-of-type {
+        margin: 0;
+      }
+
       div:nth-of-type(2) {
         top: 100%;
         padding: 0;
